# Grudon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
emulation_harness/: README.md  cpu_freq_set.sh  memory_bandwidth_set.sh  smt_toggle.sh
emulation_harness/stream/: README.md  stream  stream.c
include/: DistributedGraph.hpp  Graph.hpp  GraphAlgorithm.hpp  Logger.hpp  MPI.hpp  Workers.hpp
include/graph_algorithms/: cc.hpp  pr.hpp  sssp.hpp
include/offload_engine/: INCEngine.hpp  NDPEngine.hpp
include/partitioning_engine/: Partitioner.hpp
logs/emulation_runs/: sssp_
scripts/: convert_and_partition.sh  extract_pr_op.sh  formatDMAblationLogs.sh  formatDeploymentDMLogs.sh  formatLogs.sh  formatRuntimeLogs.sh  formatZoomLogs.sh  generate_partitions.sh  gluon_proc_map  graphq_proc_map  groudon_proc_map  parseGaloisPRLog.sh  parseGaloisPowerLog.sh  parseGroudonLog.sh  parseGroudonPowerLog.sh  parseGroudonZoomLog.sh  parsePerIterLogs.sh  parse_diff.sh  partitions_sweep.sh  run_dm.sh  run_emulations.sh  run_until_fail.sh  run_zoom_emulations.sh  sensitivity_analysis.sh
src/: DistributedGraph.cpp  GraphAlgorithm.cpp  Workers.cpp  main.cpp
src/graph_algorithms/: cc.cpp  pr.cpp  sssp.cpp
tools/: mt-metis-partitioner.cpp
